# AWS-CUR-MCP-Server

./: Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: sagemaker_metrics.py  server.py
tests/: test_server.py
